# daily-song-rust

backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  railway.toml
backend/.cargo/: config.toml
backend/.sqlx/: query-11c37c4039551693d74999a6f166f1fd328a1933f993b6be05e9eda7a7977f2d.json  query-3fcf3f04b394bf17035c2f115d8a9cd1de8cf8527a3079af93893e589f89c15e.json  query-5859dc1c5f5d7755b74d3bf9fcfe5c8a622c7afd7e58e16ec8a60e0122912438.json  query-9535c352a753d312025b838f76170593fb443ddd0ae51aed4dafadd0e63c7fa0.json  query-be1fb9e9531f88c1c8e750b19edb0287f87d98739608d865e6224dbabe282a63.json  query-ca25fbd3c0ad8d6e7edbe5be1ab294c282703d485ec73f7b1bc4819334a404f5.json  query-d00597edbdad899c50c763eee53127d6e2b054f89507f732577c14995de3a403.json
backend/migrations/: 20260331180138_initial_schema.down.sql  20260331180138_initial_schema.up.sql
backend/src/: config.rs  main.rs  state.rs  zod_generator.rs
backend/src/handlers/: app.rs  health.rs  mod.rs  spotify_oauth.rs
backend/src/models/: app.rs  errors.rs  mod.rs  spotify.rs  user.rs
frontend/: .env.example  README.md  _redirects  netlify.toml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
frontend/src/: hooks.server.ts
frontend/src/lib/components/: BottomNav.svelte  Header.svelte  LoginButton.svelte  LogoutButton.svelte
frontend/src/lib/types/: Album.ts  Artist.ts  Image.ts  Track.ts  TracksPage.ts  schemas.ts  (+1 more)
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  Header.svelte  HeaderUser.svelte  LogoutButton.svelte  layout.css
(+11 files in other folders)
