[package]
name = "daily-song-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "migrate", "macros", "time"] }
time = "0.3.47"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
zod_gen = "1.3.0"
zod_gen_derive = "1.3.0"